trying to run keccak...

--- a/task1c/Makefile
+++ b/task1c/Makefile
@@ -1,9 +1,9 @@
 CC=gcc
 CFLAGS=-c -Wall
 LDFLAGS=
-SOURCES=des_test.c des.c
-OBJECTS=$(SOURCES:.c=.o)
-EXECUTABLE=des_test
+SOURCES=keccak_mac.c
+OBJECTS=build/$(SOURCES:.c=.o)
+EXECUTABLE=build/keccak_mac
 
 all: run
 	$(SOURCES) $(EXECUTABLE)
@@ -11,7 +11,7 @@ all: run
 $(EXECUTABLE): $(OBJECTS)
 	$(CC) $(LDFLAGS) $(OBJECTS) -o $@
 
-.c.o:
+build/%.o: %.c
 	$(CC) $(CFLAGS) $< -o $@
 
 run: $(EXECUTABLE)
