adding the make easy command to the makefile (because i'm too dumb to get the other ones to run on the keccak file)

--- a/task1c/Makefile
+++ b/task1c/Makefile
@@ -19,5 +19,9 @@ run: $(EXECUTABLE)
 
 .PHONY: all run
 
+easy:
+	$(CC) -Wall $(SOURCES) -o $(EXECUTABLE)
+	./$(EXECUTABLE)
+
 clean:
 	rm -rf $(EXECUTABLE) $(OBJECTS)
